# SquareRingBot

./: .gitignore  .gitmodules  BestCurrent.cpp  Board.cpp  Board.h  Bots.h  CMakeLists.txt  CardFactory.cpp  CardFactory.h  CardLibrary.cpp  CardLibrary.h  Cards.json  CharactersNotes.md  MCTSBot.h  MiniMax.cpp  Monte.h  Player.cpp  Player.h  Random.h  cards-simple.json  cards.h  characters.json  constants.h  direction.md  libary.h  main.cpp  main.h  mcts.cpp  mingw-toolchain.cmake  note.md  readme.md  test_main.cpp  tournament.cpp
JSON/: Cards.json  Config.json
Notes/: Notes.md
Python-Scripts/: DrawGrid.py  coor.py  uniquePositions.py
